# EternalSonataReprise

./: .gitignore  CMakeLists.txt  README.md  eternalsonata_config.toml  eternalsonata_manifest.toml
.github/ISSUE_TEMPLATE/: bug_report.md  patch-mod-request.md
.github/workflows/: _build.yml  ci.yml  release.yml
src/: eternalsonata_app.h  eternalsonata_fp_guard.h  eternalsonata_hooks.cpp  main.cpp
